kubernetes/minio/olm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
spec: {}
