kubernetes/minio/olm/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio-operator
spec:
  ingressClassName: nginx
  rules:
  - host: "local.minio"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: console
            port:
              number: 9090
